# Prism-Visuals

./: .gitignore  Cargo.toml  LICENSE.md  README.md  SECURITY.md  _License.rtf  main.wxs
docs/: API_SETUP.md  CHANGELOG.md  DEBUG.md  Initialize.md  License.rtf  README.md  REPORT.md  WIX_INSTRUCTIONS.md  architecture.md  testing_guide.md
src/: main.rs  pexels.rs  picker_archive.rs  scheduler.rs  wallhaven.rs
