[package]
name = "visuals"
version = "1.2.6"
edition = "2021"
authors = ["SibtainOcn"]
description = "Prism Visuals - CLI tool for visuals"

# WiX Installer Configuration
[package.metadata.wix]
upgrade-guid = "12345678-1234-1234-1234-123456789012"
path-guid = "87654321-4321-4321-4321-210987654321"
license = false
eula = false

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
colored = "2.0"
urlencoding = "2.1"
base64 = "0.21"

# Windows-specific dependencies for wallpaper setting (no admin needed)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
